Put Dam on legend, and remove from flow info. Stop Skill overflow in topbar. Increase font size. Use important so that the riverspan:nth-child doesn't overwrite the @media

--- a/index.css
+++ b/index.css
@@ -150,9 +150,9 @@ Those include name,section,skill,quality, and flow info*/
 }
 
 .riverspan:nth-child(1) {
-    width:24%;
-    min-width:24%;
-    max-width:24%;
+    width:24.5%;
+    min-width:24.5%;
+    max-width:24.5%;
 }
 .riverspan:nth-child(2) {
     width:30%;
@@ -179,28 +179,36 @@ Those include name,section,skill,quality, and flow info*/
 @media screen and (min-width: 550px) {
     /*Add the 4th span. Resize others so that it fits.*/
     .riverspan:nth-child(1) {
-        width:17%;
-        min-width:17%;
-        max-width:17%;
+        width:19%;
+        min-width:19%;
+        max-width:19%;
     }
     .riverspan:nth-child(2) {
         width:29%;
         min-width:29%;
         max-width:29%;
     }
+	
     .skillspan {
-        width:5%;
-        min-width:5%;
-        max-width:5%;
+        width:5% !important;
+        min-width:5% !important;
+        max-width:5% !important;
     }
     .riverspan:nth-child(4) {
         display: inline-block;
     }
     .classspan {
-        width:10%;
-        min-width:10%;
-        max-width:10%;
-    }
+        width:10% !important;
+        min-width:10% !important;
+        max-width:10% !important;
+	}
+	
+	#topbar > .skillspan {
+		/*Let "Skill" use up however much space it needs*/
+		width: auto !important;
+		min-width: none !important;
+		max-width: none !important;
+	}
 }
 
 @media screen and (max-width:309px) {
@@ -356,7 +364,7 @@ Those include name,section,skill,quality, and flow info*/
 
 @media screen and (max-width: 370px) {
     .riverbutton {
-        font-size: 3.4vw; /*Any bigger than this, and we get quite a bit of text overlapping.*/
+        font-size: 3.48vw; /*Any bigger than this, and we get quite a bit of text overlapping.*/
 		padding-left: 4px; /*Leave a little more space for other stuff than the standard 8px.*/
 		padding-right: 2px; /*Give a bit more space. Rarely is this padding noticed at all.*/
     }
